--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <div class="evidence-list"></div>
             <hr />
             <div class="ghost-list"></div>
+            <hr />
+            <button id="reset">Reset</button>
         </main>
     </body>
 </html>
