Added responsive design

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <body>
         <main>
             <h1>Evidence</h1>
-            <hr />
-            <div class="evidence-list"></div>
-            <hr />
-            <div class="ghost-list"></div>
-            <hr />
+            <div class="main">
+                <div class="evidence-list"></div>
+                <div class="ghost-list"></div>
+            </div>
             <button id="reset">Reset</button>
         </main>
     </body>
